<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonateDetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/need"
            android:textColor="@color/orange_200"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/food"
            android:textColor="@color/orange_700"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <ImageView
            android:id="@+id/make_call"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_outline_local_phone_24" />

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="2dp"
        android:paddingHorizontal="10dp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="2dp"
        android:paddingHorizontal="10dp" />

    <Button
        android:id="@+id/remove_active_donation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/remove_from_active_donation"
        android:visibility="invisible"/>

</LinearLayout>