<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_marginEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:lines="1"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            android:paddingHorizontal="10dp"
            android:lines="1"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            android:paddingHorizontal="10dp"
            android:lines="1"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>